# AutoMS

./: CMakeLists.txt  README.md  bf  cudaMemManager.h  go.py  optixPathTracer.cpp  optixPathTracer.cu  optixPathTracer.h  physical_exp_nni_main.py  physical_exp_nni_model.py
hardware/: README.md  mmwave_rings_open_souce.aedt
optix/SDK/: CMakeLists.txt  sampleConfig.h.in
optix/SDK/CMake/: ConfigCompilerFlags.cmake  FindOpenEXR.cmake  Macros.cmake
optix/SDK/lib/DemandLoading/: CMakeLists.txt  DemandLoaderImpl.cpp  DemandLoaderImpl.h  PagingSystem.cpp  PagingSystem.h  PagingSystemKernels.cu  PagingSystemKernels.h  RequestProcessor.cpp  RequestProcessor.h  RequestQueue.cpp  RequestQueue.h  TicketImpl.h
optix/SDK/lib/DemandLoading/Memory/: AsyncItemPool.h  Buffers.h  PinnedItemPool.h  PinnedMemoryManager.h  SamplerPool.h  TilePool.cpp  TilePool.h
optix/SDK/lib/DemandLoading/Textures/: CheckerBoardImage.cpp  DemandTextureImpl.cpp  DemandTextureImpl.h  EXRReader.cpp  ImageReader.cpp  SamplerRequestHandler.cpp  SamplerRequestHandler.h  SparseTexture.cpp  SparseTexture.h  TextureInfo.cpp  TextureRequestHandler.cpp  TextureRequestHandler.h
optix/SDK/lib/DemandLoading/Util/: Exception.h  Math.h
optix/SDK/lib/DemandLoading/docs/API/: CMakeLists.txt  Doxyfile  overview.txt
optix/SDK/lib/DemandLoading/include/DemandLoading/: CheckerBoardImage.h  DemandLoader.h  DemandTexture.h  DeviceContext.h  EXRReader.h  ImageReader.h  MultiCheckerImage.h  Options.h  Paging.h  Resource.h  Statistics.h  Texture2D.h  TextureDescriptor.h  TextureInfo.h  TextureSampler.h  Ticket.h
optix/SDK/support/: CMakeLists.txt
optix/SDK/support/imgui/: CMakeLists.txt
optix/SDK/sutil/: CMakeLists.txt  CUDAOutputBuffer.h  sutil.cpp  sutil.h
optix/include/tqdm/: tqdm.h  utils.h
output/0_STANDALONE/: ms_and_codebook.pt  optimization_result.pt
stl/4321/: floor0_carpet.stl  mat.txt  sofa0_wood.stl  table0_wood.stl  tv0_screen.stl  wall.txt  wall1_wall3.stl  wall2_wall.stl  wall3_wall.stl  wall4_wall3.stl  wall5_wall.stl  wall6_wall.stl  wall7_wall3.stl  wall8_wall.stl  wall9_wall.stl  window0_glass.stl
